// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CCard renders correctly 1`] = `
<div
  class="card text-left bg-success border-solid text-white"
>
  <header
    class="card-header"
  >
    header
  </header>
  <div
    class="card-body"
  >
    body
  </div>
  <footer
    class="card-footer"
  >
    footer
  </footer>
</div>
`;

exports[`CCard renders correctly with slots 1`] = `
<div
  class="card text-left bg-success border-solid text-white"
>
  <header
    class="card-header"
  >
    header
  </header>
  this should overwrite body
  <br />
  <footer
    class="card-footer"
  >
    footer
  </footer>
</div>
`;
